# football-tracking-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
config/: config.yaml
notebooks/: 00-xy-example-notebook.ipynb  01-mw-detection-hud-mask-inspection.ipynb  02-mw-detection-threshold.ipynb  03-mw-compare-models.ipynb  04-mw-playing-field-masking.ipynb  05-mw-tracker-tuning.ipynb
scripts/: download_video.sh
src/football_tracking_demo/: __init__.py  config.py  detector.py  filtering.py  run_demo.py  tracker.py  video_io.py  viz.py
